crates/cribo/tests/snapshots/execution_results@xfail_forward_reference_requests_compat.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_forward_reference_requests_compat/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "File \"<stdin>\", line 266\nSyntaxError: name 'myrequests_cookies' is used prior to global declaration",
}
