crates/cribo/tests/snapshots/execution_results@xfail_function_level_module_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_function_level_module_import/main.py
---
ExecutionResults {
    status: Success,
    stdout: "",
    stderr: "",
}
