crates/cribo/tests/snapshots/execution_results@xfail_import_shadowing.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_import_shadowing/main.py
---
ExecutionResults {
    status: Success,
    stdout: "",
    stderr: "",
}
