crates/cribo/tests/snapshots/execution_results@xfail_importlib_deduplication.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_importlib_deduplication/main.py
---
ExecutionResults {
    status: Success,
    stdout: "",
    stderr: "",
}
