crates/cribo/tests/snapshots/execution_results@xfail_importlib_static.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_importlib_static/main.py
---
ExecutionResults {
    status: Success,
    stdout: "",
    stderr: "",
}
