crates/cribo/tests/snapshots/execution_results@xfail_init_reexports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_init_reexports/main.py
---
ExecutionResults {
    status: Success,
    stdout: "",
    stderr: "",
}
